# Artfulway-MCP-Agent

./: app.py  browser_mcp.json  config.py  mcp_server.py  pyproject.toml  requirements.txt  test.py  test2.py
api/: __init__.py  models.py  routes.py
core/: __init__.py  assistant.py  prompts.py
services/: __init__.py  llm_service.py  mcp_service.py
utils/: __init__.py  session.py
